--- a/index.css
+++ b/index.css
@@ -248,7 +248,7 @@ body {
 }
 
 #admissions-intro {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('assets/admissions-bg.jpg') center center;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('assets/2804951.jpg') center center;
 }
 
 #undergrad-admissions {
