--- a/index.css
+++ b/index.css
@@ -252,7 +252,7 @@ body {
 }
 
 #undergrad-admissions {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('assets/undergrad-bg.jpg') center center;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('assets/2804821.jpg') center center;
 }
 
 #grad-admissions {
