--- a/index.css
+++ b/index.css
@@ -256,7 +256,7 @@ body {
 }
 
 #grad-admissions {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('assets/grad-bg.jpg') center center;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('assets/R.jpg') center center;
 }
 
 #financial-aid {
